# ShaderImage

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/temple/shaderimage/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/base/: Looper.cpp  Looper.h  native_log.h
app/src/main/cpp/egl/: egl_core.cpp
app/src/main/cpp/image/: ImageBaseFilter.cpp  ImageBaseFilter.h  ImageData.cpp  ImageData.h  ImageLooper.cpp  ImageLooper.h  ImageRenderer.cpp  ImageRenderer.h
app/src/main/cpp/image/filter/: ImageBaseFilter.cpp  ImageBaseFilter.h  ImageBaseTwoPathFilter.cpp  ImageBaseTwoPathFilter.h  ImageElecShockFilter.cpp  ImageElecShockFilter.h  ImageGaussionBlurFilter.cpp  ImageGaussionBlurFilter.h  ImageGaussionTwoPathFilter.cpp  ImageGaussionTwoPathFilter.h  ImageGrayFilter.cpp  ImageGrayFilter.h
app/src/main/java/com/temple/shaderimage/: JavaImageView.java  ListTestActivity.kt  MainActivity.kt  ShaderImageView.kt  Utils.java
app/src/main/res/layout/: activity_main.xml  item_list.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/temple/shaderimage/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
